Fix layout bug

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -17,15 +17,15 @@
 .ancient {
   height: 100%;
   transition: all 200ms ease-in-out;
-  min-height: 100vh;
   
   @media (prefers-color-scheme: dark) {
     background-color: rgb(20, 20, 20);
   }
   
   .root-with-background {
+    height: 100%;
+    min-height: 100vh;
     position: relative;
-    // display: flex;
     
     &::before {
       @include sidePattern();
@@ -43,7 +43,7 @@
       margin: 0 auto;
       width: 100%;
       max-width: $mobile-width;
-      padding: 45px 15px 0 15px;
+      padding: 45px 0 0;
       color: black;
       height: 100%;
       background-color: white;
@@ -53,10 +53,14 @@
         background-color: rgb(20, 20, 20);
       }
       
+      @media screen and (max-width: $mobile-width) {
+        padding: 45px 15px 0 15px;
+      }
+      
       .footer-container {
         font-family: $content-font;
         height: 50px;
-        margin-top: 30px;
+        margin-top: 80px;
         text-align: center;
         font-size: 13px;
         color: grey;
