--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -16,7 +16,7 @@ $dark-gray: rgb(20, 20, 20);
 $light-box-shadow-link: rgba(0, 0, 0, 0.25);
 $light-box-shadow-head: rgba(0, 0, 0, 0.02);
 $dark-box-shadow-link: rgba(0, 0, 0, 0.8);
-$dark-box-shadow-head: rfgba(0, 0, 0, 0.6);
+$dark-box-shadow-head: rfgba(0, 0, 0, 1);
 
 $content-text-size: 16px;
 
